<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMainRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.main.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activityMainToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/activityMainBtnBack"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/bg_clickable"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/activityMainBtnTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:singleLine="true"
                android:text="@string/activity_main_title"
                android:textColor="@color/greyish_brown"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/activityMainBtnCreate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_clickable"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:paddingLeft="21dp"
                android:paddingRight="21dp"
                android:text="@string/activity_main_btn_create"
                android:textAllCaps="true"
                android:textColor="@color/dark_sky_blue"
                android:textSize="15sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/mainActivityScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activityMainToolbar"
        android:background="@color/white"
        android:paddingBottom="86dp"
        android:clipToPadding="false"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activityMainEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activityMainEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_main_email_hint"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/brownish_grey"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activityMainPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activityMainEmailLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activityMainPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_main_password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/brownish_grey"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/activityMainBtnPasswordHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bg_clickable"
                app:layout_constraintEnd_toEndOf="@id/activityMainPasswordLayout"
                app:layout_constraintTop_toTopOf="@id/activityMainPasswordLayout"
                app:srcCompat="@drawable/ic_password" />

            <ProgressBar
                android:id="@+id/activityMainProgress"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="32dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activityMainPasswordLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/activityMainBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/bg_clickable_button"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/activity_main_btn_login_text"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</RelativeLayout>